# testo

./: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  setup.cfg  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
make.include/: docs.mk  pypi.mk  test.mk
testo/: __init__.py  cli.py
tests/: __init__.py  test_testo.py
