
[metadata]
name = testo
version =  attr: testo.__version__
description = "testo tests"
long_description = README.rst
author = "Matt Krueger"
author_email = 'mkrueger@rstms.net'
license = "MIT license"
keywords = 'testo'
url='https://github.com/rstms/testo'
classifiers =
  Development Status :: 2 - Pre-Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
  pip>=21.3.1
  wheel>=0.37.0
  setuptools>=59.1.1

[options.extras_require]
dev =
  bump2version==1.0.1
  watchdog==2.1.5
  argh==0.26.2
  flake8==3.9.2
  coverage==5.5
  Sphinx==4.2.0
  isort==5.9.3
  twine==3.4.2
  tox==3.24.3
  black==21.11b0
  pytest>=3 

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:testo/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 88
extend-ignore = E203

[isort]
profile=black
[tool:pytest]
collect_ignore = ['setup.py']
[options.entry_points]
console_scripts = 
  testo = testo.cli:main
